--- a/texdocs/slides/preamble.tex
+++ b/texdocs/slides/preamble.tex
@@ -3,6 +3,7 @@
 \usepackage[german]{babel}
 \usepackage{hyperref}
 
+\usepackage[java]{src2listing}
 \usepackage{src2misc}
 \usepackage{src2sections}
 
