--- a/texdocs/slides/complexity-main.tex
+++ b/texdocs/slides/complexity-main.tex
@@ -14,4 +14,5 @@
     \end{frame}
 
     \inputframesection{$O$-Notation}{bigo/bigo.tex}
+    \inputframesection{Beispiele: Optimierung von Algorithmen}{optimization/optimization.tex}
 \end{document}
