Add an example for a sliding window approach.

--- a/texdocs/slides/sections/optimization/optimization.tex
+++ b/texdocs/slides/sections/optimization/optimization.tex
@@ -1,1 +1,2 @@
 \inputframesection[\subsection]{Vergleich der Elemente zweier Listen}{optimization/listcomparison.tex}
+\inputframesection[\subsection]{Berechnung von Produkten innerhalb von Listen}{optimization/listproducts.tex}
