--- a/texdocs/slides/sections/optimization/listcomparison.tex
+++ b/texdocs/slides/sections/optimization/listcomparison.tex
@@ -41,7 +41,7 @@
         \begin{itemize}
             \item Sortieren: \onlog
             \item Vergleichen: \olin
-            \item \alert{Gesamt}: \onlog + \olin = \alert{\onlog}
+            \item \alert{Gesamt}: $\onlog + \olin = \alert{\onlog}$
         \end{itemize}
     \end{block}
 \end{frame}
