Add slides on searching elements in a text.

--- a/texdocs/slides/sections/optimization/optimization.tex
+++ b/texdocs/slides/sections/optimization/optimization.tex
@@ -1,2 +1,3 @@
 \inputframesection[\subsection]{Vergleich der Elemente zweier Listen}{optimization/listcomparison.tex}
 \inputframesection[\subsection]{Berechnung von Produkten innerhalb von Listen}{optimization/listproducts.tex}
+\inputframesection[\subsection]{Suche nach Strings in einem Text}{optimization/stringsearch.tex}
